core/tests/integration/fail/arrays/stdlib_at_non_number_arg_raises_blame.ncl
# test.type = 'error'
# 
# [test.metadata]
# error = 'EvalError::BlameError'
std.array.at "a" []